<resources>
    <string name="app_name">PromcoserMobileApp</string>
    <string name="title_activity_navigation_promcoser">NavigationPromcoserActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Promcoser App</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Login -->
    <string name="valLogo">Logo</string>
    <string name="valTituloLogin">INICIAR SESIÓN</string>
    <string name="valHintCorreo">Correo</string>
    <string name="valHintPassword">Contraseña</string>
    <string name="valAcceder">ACCEDER</string>
    <string name="valRegistro">REGISTRARME</string>
    <string name="valTogglePasswordVisibility">Alternar visibilidad de contraseña</string>

    <string name="valLogOut">Salir</string>

    <!--Registro-->
    <string name="valTitleRegis">Registro</string>
    <string name="valNombreRegis">Nombre</string>
    <string name="valApellidoRegis">Apellido</string>
    <string name="valTelefonoRegis">Telefono</string>
    <string name="valCorreoRegis">Correo</string>
    <string name="valDniRegis">DNI</string>
    <string name="valFechaRegis">Fecha de Nacimiento</string>
    <string name="valUbigeoRegis">Ubigeo</string>
    <string name="valUsernameRegis">Usuario</string>
    <string name="valPasswordRegis">Contraseña</string>
    <string name="valRegistroRegis">Registrarme</string>

    <string name="menu_home">Parte Diario</string>
    <string name="menu_personal">Personal</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="valMaquinaria">Maquinaria</string>
    <string name="tituloPersonalFragment">Registro de Personal</string>
    <string name="txtnombre">Nombre Completo</string>
    <string name="txtapellidos">Apellidos</string>
    <string name="valHintapellidos">Apellidos</string>
    <string name="valrol">Rol</string>
    <string name="txtphonenumber">Numero de telefono</string>
    <string name="valemail">Email</string>
    <string name="valnumeroDni">Dni</string>
    <string name="txtEstado">Estado</string>
    <string name="txtrgactivo">Activo</string>
    <string name="txtnoactivo">No Activo</string>
    <string name="txtañonacimiento">Fecha de Nacimiento</string>
    <string name="txtUbicacion">Ubicacion</string>
    <string name="valUsernametext">Usuario</string>
    <string name="txtpassword">Contraseña</string>
    <string name="txtabuttonregister">Registrar Personal</string>
    <string name="tituloClienteFragment">Registro de Cliente</string>
    <string name="tipoCliente">Tipo de Cliente</string>
    <string name="razonSocial">Razon Social</string>
    <string name="ruc">RUC</string>
    <string name="direccion">Direccion</string>
    <string name="Cliente">menu_cliente</string>
    <string name="menu_cliente">Cliente</string>
    <string name="valbtnregcliente">Registrar Cliente</string>
    <string name="valetingresarnombrempleado">Buscar...</string>
    <string name="titleFragHistorialCliente">Historial de clientes</string>
    <string name="txtBuscar">Buscar...</string>
    <string name="subTitleDNI">DNI:</string>
    <string name="subTitleApellidos">Apellidos:</string>
    <string name="subTitleNombres">Nombres:</string>
    <string name="subTitleRUC">RUC:</string>
    <string name="btnDetalles">Mas detalles</string>
    <string name="txthist">Historial</string>
    <string name="logo_promcoser">imgValue</string>
    <string name="valbtnhistcliente">Historial Clientes</string>
    <string name="titleDetalle">Detalles</string>
    <string name="btnMoreDetailsBack">Regresar</string>
    <string name="moreDetailsIDC">"ID:"</string>
    <string name="moreDetailsTypeC">"Tipo de cliente:"</string>
    <string name="moreDetailsPhoneC">"Telefono:"</string>
    <string name="moreDetailsMailC">"Correo:"</string>
    <string name="moreDetailsAddressC">"Direccion:"</string>
    <string name="moreDetailsStatusC">"Estado:"</string>
    <string name="moreDetailsSocialReasonC">Razon social:</string>
    <string name="valNombreRegistro">Nombre</string>
=======
    <string name="fhcTituloBuscar">Buscar cliente:</string>
    <string name="valConfirmaContra">Confirma Password</string>
    >>>>>>> cef8fe8e6ceb691e25e6cd51246a1095ea8f2bb0
</resources>